--- a/RoomMe/app/src/main/res/values/strings.xml
+++ b/RoomMe/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="money_sign">$</string>
     <string name="sell">Sell</string>
     <string name="favorite">Favorites</string>
+    <string name="date_field">Date Field</string>
+    <string name="messages">Messages</string>
     <string name="more">More</string>
     <string name="filter_action">sort/filter</string>
     <string name="new_contract">New Contract</string>
@@ -47,7 +49,9 @@
     <string name="postal_code">Postal</string>
     <string name="filter">Filter</string>
     <string name="cancel">Cancel</string>
+    <string name="cancel_btn">CANCEL</string>
     <string name="ok">OK</string>
+    <string name="save_btn">SAVE</string>
     <string name="apply">Apply</string>
     <string name="marital_status">Marital Status</string>
     <string name="single">Single</string>
@@ -65,6 +69,7 @@
     <string name="TAG_register">register</string>
     <string name="TAG_buy">buy</string>
     <string name="TAG_sell">sell</string>
+    <string name="TAG_datedialog">datedialog</string>
     <string name="TAG_main_frag">MainFragment</string>
     <string name="TAG_new_contract">NewContract</string>
     <string name="TAG_currentfrag">current</string>
