profile page is up

--- a/RoomMe/app/src/main/res/values/strings.xml
+++ b/RoomMe/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="favorite">Favorites</string>
     <string name="date_field">Date Field</string>
     <string name="messages">Messages</string>
-    <string name="more">More</string>
+    <string name="profile">Profile</string>
     <string name="filter_action">sort/filter</string>
     <string name="new_contract">New Contract</string>
     <string name="apartment_name">Apartment Name</string>
